# onigmo-rs

./: Cargo.toml
onigmo/: Cargo.toml  README.md
onigmo-sys/: Cargo.toml  README.md  build.rs  wrapper.h
onigmo-sys/examples/: simple.rs
onigmo-sys/src/: lib.rs
onigmo/examples/: simple.rs
onigmo/src/: lib.rs
